# presidents

./: .gitignore  Makefile  README.md  SOURCES.md  millercenter.py  requirements.txt  setup.cfg  tapp.py
analysis/: __init__.py  plotting.py  readers.py  speeches.py  text.py
data/: michael-anton.json  trump.json
data/lexicons/: authoritarian-manual.txt  democratic-manual.txt  freedom-100.txt  war-100.txt
data/stopwords/: google-1t.txt  spacy-english.txt
data/tapp/: election2004.json  inaugurals.json  listing2016-01.json  listing2016-04.json  listing2016-05.json  listing2016-06.json  listing2016-07.json  listing2016-08.json  listing2016-09.json  listing2016-10.json  listing2016-11.json  listing2016-12.json  listing2017-01.json  listing2017-02.json  listing2017-03.json  listing2017-04.json  listing2017-05.json  listing2017-06.json  (+6 more)
docs/: Miller_Center.md  Sources.md  TAPP.md
notebooks/: Historical-Analysis.ipynb  Historical-inaugural-address-timeseries.ipynb  Inaugural-Shift.ipynb  Mentions-in-speeches.ipynb  Similar-words.ipynb  Words-with-Trump.ipynb  __init__.py  inaugural_campaign_scatter_labeled_log_log.csv  inaugural_scatter_labeled_v2.csv  newsprint.mplstyle  nlp.py
presidents/: __init__.py  models.py  readers.py  scraping.py  stopwords.py  text.py  util.py  visualization.py
scraping/: __init__.py  abcnews.py  cbsnews.py  cli.py  cspan.py  millercenter.py  tapp.py  whitehouse.py
speeches/: Makefile  README.md  millercenter.py
src/: __init__.py  abc.py  abcnews.py  cli.py  millercenter.py  tapp.py  whitehouse.py
stopwords/: google-1t-10000.txt
(+365 files in other folders)
