[metadata]
name = presidents
version = 0.0.1
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/presidents
description = Presidential data and analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
  altair
  beautifulsoup4
  cytoolz
  datasci
  ftfy
  jupyterlab
  liwc
  matplotlib
  pandas
  pycairo
  pycodestyle
  python-dateutil
  pytz
  requests
  requests-cache
  scikit-learn
  scipy
  spacy
  textacy
  tqdm
  wordcloud
